--- a/proyecto/src/components/Cancion/styles.css
+++ b/proyecto/src/components/Cancion/styles.css
@@ -2,39 +2,59 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 5% auto;
-    border: solid 2px;
-    align-items: center;
-    background-color: rgb(71, 72, 70);
-    padding: 3%;
+    justify-content: space-around;
+    background-color: #E1F5FF;
+    padding: 20px;
+    
+}
+.cancion-card{
+    background-color: rgb(255, 254, 246);
+    text-align: center;
+    padding: 10px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+    margin-top: 10px;
+}
+.cancion-card img{
+    width: 100%;
+}
+.artista-text{
+    color: mediumslateblue;
+    line-height: 10px;
+}
+.links{
+    background-color: #e87979;
+    border-radius: 10px;
+    padding: 5px;
+    cursor: pointer;
+    cursor: hand;
+}
+.detalle{
+    color:lightsteelblue;
+    border-radius: 10px;
+    padding: 5px;
+    cursor: pointer;
+    cursor: hand;
+}
+.boton{
+    border: 1px solid #2e518b;
+    padding: 10px;
+    background-color: #2e518b;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Helvetica', sans-serif;
+    border-radius: 50px;
 }
 
-.button{
-        background: #a9862e;
-        background-image: -webkit-linear-gradient(top, #9732ea, #6e3393);
-         background-image: -moz-linear-gradient(top, #9732ea, #6e3393);
-         background-image: -ms-linear-gradient(top, #9732ea, #6e3393);
-         background-image: -o-linear-gradient(top, #9732ea, #6e3393);
-         background-image: linear-gradient(to bottom, #9732ea, #6e3393);
-        -webkit-border-radius: 28;
-         -moz-border-radius: 28;
-         border-radius: 18px;
-         -webkit-box-shadow: 6px 5px 24px #666666;
-         -moz-box-shadow: 6px 5px 24px #666666;
-         box-shadow: 2px 2px 10px #666666;  
-        font-family: Arial;
-         font-size: 10px;
-         padding: 8px;
-         text-decoration: none;}
-         
-        .btn:hover {
-         background: #2079b0;
-         background-image: -webkit-linear-gradient(top, #2079b0, #eb94d0);
-         background-image: -moz-linear-gradient(top, #2079b0, #eb94d0);
-         background-image: -ms-linear-gradient(top, #2079b0, #eb94d0);
-         background-image: -o-linear-gradient(top, #2079b0, #eb94d0);
-         background-image: linear-gradient(to bottom, #2079b0, #eb94d0);
-         text-decoration: none;
-        }
-        
+.boton2{
+    border: 1px solid #d54083;
+    padding: 10px;
+    background-color: #8a254c;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Helvetica', sans-serif;
+    border-radius: 50px;
+}
