--- a/proyecto/src/components/Album/styles.css
+++ b/proyecto/src/components/Album/styles.css
@@ -47,14 +47,16 @@
     font-family: 'Helvetica', sans-serif;
     border-radius: 50px;
 }
-
-.boton2{
-    border: 1px solid #d54083;
+.section-boton{
+    background-color: #E1F5FF;
+    padding-bottom: 15px;
+    padding-left: 40px;
+}
+.boton3{
+    border: 2px solid black;
     padding: 10px;
-    background-color: #8a254c;
-    color: #ffffff;
+    background-color:  #E1F5FF;
     text-decoration: none;
     text-transform: uppercase;
-    font-family: 'Helvetica', sans-serif;
-    border-radius: 50px;
+    border-radius: 30px;
 }
